General cleanup, conversion to vim9 Popup for startup problems. Popup for settings issues. Simplify boot, only one command mapped until use. Logging mechanism, with category exclusion, python side funnels to vim side logging. TextProps for Next/Previous. The startup problems popup dialog y/n for abort merge. Settings popup non-fatal. It describes each issue. All vim files vim9script. Splice command names consistent with splice help file. Remove vim side command wrappers.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,31 @@
+TODO:   Use contruct like: buffers.result.winnr (NOTE: the -1)
+        Make winnr a property rather than method
+
+TODO:   Add help tag 'Splice' *before* the table of contents
+
+TODO:   search.vim
+        Do HighlightConflict at very beginning.
+        Handle it separately from NextHightlight
+
+TODO:   show conflicts on startup
+
+TODO:   Understand scrollbind,syncbind,scrollopt
+        'diff' mode, diff.txt
+
+TODO:   <M-n>,<M-N> highlight conflict in all windows
+
+DONE:   boolsetting bug, BUT: see comment with defaults in splice.vim
+
+TODO:   The help has 'splice_initial_diff_*' never referenced.
+        What are they?
+
+=== Do the other premerge options work? keep-merge3, keep-mergediff
+
+=== If vim version or python problem,
+    execute (or option) :cq when popup dismissed
+
+=== boolsetting bug, see comment with defaults in splice.vim
+
 
 
 ? disable mappings by default
