Hot HUD. rollover and execute commands with click. Som prep for shortcuts popup: BindingList, Keys2Str. Don't try to run vim9script if !has(). Add log.log_stack on py side.

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+TODO:   In keys.vim, GetMapping() return null not ''
+
+TODO:   shortcut, popup with key bindings
+
 TODO:   Use contruct like: buffers.result.winnr (NOTE: the -1)
         Make winnr a property rather than method
 
